--- a/profile/profile.html
+++ b/profile/profile.html
@@ -82,7 +82,7 @@
         <h2>추가 정보</h2>
         <div class="info-row">
           <span class="info-label">맞은 문제/푼 문제</span>
-          <span class="info-value" id="total-solved">맞은</span>
+          <span class="info-value" id="total-solved"></span>
         </div>
         <div class="info-row">
           <span class="info-label">정답률</span>
