--- a/login/login.html
+++ b/login/login.html
@@ -15,8 +15,10 @@
 <body>
   <div class="navbar">
     <a class="brand" href="/index.html">NetLab</a>
-    <div id="nav-links"></div>
-    <div class="user-info" id="user-info" style="display:none;"></div>
+    <div class="right-group">
+      <div id="nav-links"></div>
+      <div class="user-info" id="user-info" style="display:none;"></div>
+    </div>
   </div>
 
   <div class="main">
